Fixed date formattings
Dates were kind of weird, stored in different time zones. Stored under UTC dates now in the form of miliseconds since epoch. They can be read easily enough with Date(epoch*1000) and should be easier to query against.

--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "apollo-server": "^2.7.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "glicko2-js": "github:Googlrr/Glicko2-JS",
     "graphql": "^14.4.2",
     "mongoose": "^5.6.5",
     "node-fetch": "^2.6.0"
